# looper_rust

./: .gitignore  .loop_prompt.txt  .ubsignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  REAL_GAP_ANALYSIS.md  clippy.toml  grove.toml  install.ps1  install.sh  rust-toolchain.toml  rustfmt.toml
.beads/: config.yaml  issues.jsonl
.grove/: grove.db  grove.db-shm  grove.db-wal  startup_prompt.md
crates/diffanchor/: Cargo.toml
crates/diffanchor/src/: lib.rs
crates/grove-cli/: Cargo.toml
crates/grove-cli/src/: clean.rs  main.rs  tests.rs
crates/grove-cli/tests/: phase1_acceptance.rs  phase3_acceptance.rs  phase4_acceptance.rs  phase5_acceptance.rs  phase6_acceptance.rs
crates/grove-db/: Cargo.toml
crates/grove-db/migrations/: 0004_mirror_outbox.sql  0005_operational_schema.sql  0008_archive_watermarks.sql  0009_playbook.sql  0010_activity_state.sql  0014_cleanup_snapshots.sql
crates/grove-db/src/: archive.rs  cleanup.rs  lib.rs  ops.rs  playbook.rs  tests.rs
crates/grove-kernel/: Cargo.toml
crates/grove-kernel/src/: archive.rs  diary.rs  dispatch.rs  inspect_view.rs  lesson_ingest.rs  lib.rs  policy.rs  reactions.rs  scoring.rs  status_view.rs  tests.rs
crates/grove-kernel/src/dispatch/: tests.rs
crates/grove-kernel/src/inspect_view/: tests.rs
crates/grove-kernel/src/reactions/: tests.rs
crates/grove-kernel/src/scoring/: tests.rs
crates/grove-kernel/src/status_view/: tests.rs
crates/grove-session/: Cargo.toml
crates/grove-session/src/: analysis.rs  analyzer.rs  backend.rs  exit_policy.rs  lib.rs  materializer.rs  parser.rs  progress.rs  protocol.rs  retry.rs  runner.rs  transcript.rs  verify.rs
crates/grove-session/src/analysis/: tests.rs
crates/grove-session/src/analyzer/: tests.rs
crates/grove-session/src/backend/: tests.rs
crates/grove-session/src/exit_policy/: tests.rs
crates/grove-session/src/materializer/: tests.rs
crates/grove-session/src/parser/: tests.rs
crates/grove-session/src/progress/: tests.rs
crates/grove-session/src/protocol/: tests.rs
crates/grove-session/src/retry/: tests.rs
crates/grove-session/src/runner/: tests.rs
crates/grove-session/src/transcript/: tests.rs
crates/grove-session/tests/: phase2_acceptance.rs
crates/looper-agent/: Cargo.toml
crates/looper-agent/src/: args.rs  env.rs  error.rs  executor.rs  lib.rs  parse.rs  types.rs
crates/looper-api/: Cargo.toml
crates/looper-api/src/: auth.rs  envelope.rs  error.rs  helpers.rs  lib.rs  routes.rs  server.rs  sse.rs  types.rs
crates/looper-cli/: Cargo.toml
crates/looper-cli/src/: autoupgrade.rs  client.rs  config_local.rs  daemon.rs  error.rs  lib.rs  main.rs  output.rs  version.rs
crates/looper-cli/src/commands/: bootstrap.rs  config.rs  diagnostics.rs  events.rs  feedback.rs  fix.rs  jump.rs  labels.rs  locks.rs  logs_follow.rs  loops.rs  mod.rs  netadmin.rs  plan.rs  pr.rs  projects.rs  prompt.rs  ps.rs  queue.rs  reconcile.rs  review.rs  run_stats.rs  runs.rs  stop.rs  takeover.rs  webhook.rs  work.rs  worktree.rs
crates/looper-config/: Cargo.toml
crates/looper-config/src/: defaults.rs  disclosure.rs  enums.rs  env.rs  error.rs  lib.rs  loader.rs  normalize.rs  partial.rs  permissions.rs  types.rs  validate.rs
crates/looper-e2e/: Cargo.toml
crates/looper-e2e/src/: artifacts.rs  assertions.rs  binaries.rs  config.rs  daemon.rs  fake_agent.rs  fake_gh.rs  git.rs  lib.rs  ports.rs  temp_home.rs  wait.rs
crates/looper-e2e/tests/: admit_work_test.rs  dispatch_plan_test.rs  full_cycle_test.rs  reviewer_fixer_handoff_test.rs  smoke_daemon_test.rs
crates/looper-git/: Cargo.toml
crates/looper-git/src/: error.rs  gateway.rs  helpers.rs  lib.rs  safety.rs  types.rs
crates/looper-github/: Cargo.toml
crates/looper-github/src/: cache.rs  error.rs  gateway.rs  graphql.rs  helpers.rs  lib.rs  tests.rs  types.rs
crates/looper-infra/: Cargo.toml
crates/looper-infra/src/: agent_cleanup.rs  bootstrap.rs  circuit_breaker.rs  daemon_lock.rs  error.rs  forwarder_supervisor.rs  lib.rs  recovery.rs  runtime.rs  shell.rs
crates/looper-infra/src/notifications/: database.rs  mod.rs  osascript.rs  throttle.rs
crates/looper-infra/src/worktree_cleanup/: mod.rs  plan.rs  run.rs
crates/looper-net/: Cargo.toml
crates/looper-net/src/: client.rs  error.rs  helpers.rs  lib.rs  main.rs  manager.rs  policy.rs  state.rs  types.rs
crates/looper-net/src/server/: db.rs  handlers.rs  mod.rs
crates/looper-release/: Cargo.toml
crates/looper-release/src/: lib.rs
crates/looper-runner/: Cargo.toml
crates/looper-runner/src/: completion.rs  coordinator.rs  depgraph.rs  dispatch.rs  error.rs  fixer.rs  fixer_handoff.rs  lib.rs  lifecycle.rs  merge_watch.rs  middleware.rs  permissions.rs  planner.rs  reviewer.rs  reviewer_criteria.rs  triage.rs  types.rs  worker.rs
crates/looper-scheduler/: Cargo.toml
crates/looper-scheduler/src/: active_executions.rs  claim.rs  error.rs  failure.rs  lib.rs  recovery.rs  scheduler.rs  tick.rs  types.rs
crates/looper-service/: Cargo.toml
crates/looper-service/src/: admit_work.rs  error.rs  lib.rs  loop_service.rs  project_service.rs  run_service.rs
crates/looper-storage/: Cargo.toml
crates/looper-storage/migrations/: V1__initial.sql  V2__extend_coverage.sql  V3__runs_agent_columns.sql  V4__outcomes.sql  V5__queue_active_dedupe_all_roles.sql
crates/looper-storage/src/: error.rs  eventlog.rs  helpers.rs  lib.rs  middleware.rs  migration.rs  record.rs  tests.rs
crates/looper-storage/src/repos/: agent_executions.rs  events.rs  locks.rs  loops.rs  mod.rs  notifications.rs  outcomes.rs  projects.rs  pull_request_snapshots.rs  queue.rs  runs.rs  webhook_forwarders.rs  webhook_tunnel_hooks.rs  worktrees.rs
crates/looper-types/: Cargo.toml
crates/looper-types/src/: error.rs  failure.rs  lib.rs  loop_status.rs  loop_target.rs  loop_type.rs  resume.rs  retry_policy.rs  run_status.rs  steps.rs  vendor.rs
crates/looper-webhook/: Cargo.toml
crates/looper-webhook/src/: error.rs  forwarder.rs  lib.rs  routing.rs  tunnel.rs  types.rs
crates/looperd/: Cargo.toml
crates/looperd/src/: main.rs  version.rs
(+155 files in other folders)
