[package]
name = "grove-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "grove"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono = { version = "0.4", features = ["serde"] }
clap.workspace = true
grove-br = { path = "../grove-br" }
grove-bv = { path = "../grove-bv" }
grove-config = { path = "../grove-config" }
grove-db = { path = "../grove-db" }
grove-kernel = { path = "../grove-kernel" }
grove-session = { path = "../grove-session" }
grove-types = { path = "../grove-types" }
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
assert_cmd = "2"
rusqlite.workspace = true
serde_json.workspace = true
tempfile = "3"
