[package]
name = "grove-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
grove-br = { path = "../grove-br" }
grove-bv = { path = "../grove-bv" }
grove-db = { path = "../grove-db" }
grove-types = { path = "../grove-types" }
