[package]
name = "grove-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
grove-br = { path = "../grove-br" }
grove-bv = { path = "../grove-bv" }
grove-config = { path = "../grove-config" }
grove-db = { path = "../grove-db" }
grove-session = { path = "../grove-session" }
grove-types = { path = "../grove-types" }
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
ctrlc = "3"
regex = "1"

[dev-dependencies]
camino.workspace = true
rusqlite.workspace = true
tempfile = "3"
