[package]
name = "grove-session"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono = { version = "0.4", features = ["serde"] }
grove-types = { path = "../grove-types" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
