[package]
name = "looper-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent executor for 5 AI coding vendors (Claude Code, Codex, OpenCode, Cursor CLI, Hermes)"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
looper-config = { path = "../looper-config" }
looper-storage = { path = "../looper-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
chrono.workspace = true
regex.workspace = true
uuid.workspace = true
