[package]
name = "looper-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "axum REST API server with auth, SSE, and structured envelope responses"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
looper-config = { path = "../looper-config" }
looper-storage = { path = "../looper-storage" }
looper-service = { path = "../looper-service" }
looper-scheduler = { path = "../looper-scheduler" }
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
