[package]
name = "looper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Looper CLI binary with 35+ subcommands"

[lints]
workspace = true

[dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
which.workspace = true
