[package]
name = "looper-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Config loading, validation, merge, and disclosure stamping"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true

[dev-dependencies]
paste = "1.0"
tempfile.workspace = true
