[package]
name = "looper-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Git worktree management and safety"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
looper-storage = { path = "../looper-storage" }
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
git2.workspace = true
tokio.workspace = true
regex.workspace = true
