[package]
name = "looper-git"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Git worktree management and safety"

[lints]
workspace = true

[dependencies]
looper-storage = { path = "../looper-storage" }
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
