[package]
name = "looper-github"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GitHub gateway wrapping gh CLI commands"

[lints]
workspace = true

[dependencies]
looper-config = { path = "../looper-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest.workspace = true
uuid.workspace = true
