[package]
name = "looper-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Loopernet cloud server binary for multi-node coordination"

[lints]
workspace = true

[dependencies]
looper-config = { path = "../looper-config" }
axum.workspace = true
clap.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite.workspace = true
futures.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
