[package]
name = "looper-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tick loop, queue claim, discovery, and recovery pipeline"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
looper-storage = { path = "../looper-storage" }
looper-service = { path = "../looper-service" }
looper-github = { path = "../looper-github" }
looper-git = { path = "../looper-git" }
looper-agent = { path = "../looper-agent" }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
serde.workspace = true
