[package]
name = "looper-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tick loop, queue claim, discovery, and recovery pipeline"

[lints]
workspace = true

[dependencies]
looper-storage = { path = "../looper-storage" }
looper-service = { path = "../looper-service" }
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
rusqlite.workspace = true
