[package]
name = "looper-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite storage layer with migrations, repositories, event log, and queue"

[lints]
workspace = true

[dependencies]
looper-types = { path = "../looper-types" }
looper-config = { path = "../looper-config" }
rusqlite.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
