[package]
name = "looper-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain types, enums, state machines — zero IO dependencies"

[lints]
workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
fastrand = "2"

[dev-dependencies]
serde_json.workspace = true
