[package]
name = "looper-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GitHub webhook forwarder, event routing, and tunnel management"

[lints]
workspace = true

[dependencies]
looper-storage = { path = "../looper-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
