[package]
name = "looperd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Looper daemon binary — main entry point"

[lints]
workspace = true

[dependencies]
looper-config = { path = "../looper-config" }
looper-infra = { path = "../looper-infra" }
looper-storage = { path = "../looper-storage" }
looper-service = { path = "../looper-service" }
looper-scheduler = { path = "../looper-scheduler" }
looper-runner = { path = "../looper-runner" }
looper-api = { path = "../looper-api" }
looper-webhook = { path = "../looper-webhook" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
