[package]
name = "looperd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Looper daemon binary — main entry point"

[lints]
workspace = true

[dependencies]
looper-config = { path = "../looper-config" }
looper-infra = { path = "../looper-infra" }
looper-storage = { path = "../looper-storage" }
looper-api = { path = "../looper-api" }
looper-runner = { path = "../looper-runner" }
looper-scheduler = { path = "../looper-scheduler" }
looper-service = { path = "../looper-service" }
looper-github = { path = "../looper-github" }
looper-agent = { path = "../looper-agent" }
looper-git = { path = "../looper-git" }
tokio = { workspace = true, features = ["process", "signal", "rt", "macros"] }
chrono = { workspace = true }
clap.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
async-trait.workspace = true
uuid = { workspace = true, features = ["v4"] }
rusqlite.workspace = true
